--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
@@ -7,43 +7,40 @@
   @apply text-transparent bg-clip-text bg-gradient-to-r from-[#A62C2C] to-[#CF0F47];
 }
 
-/* Hide scrollbar but allow scroll */
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
 .hide-scrollbar {
-  -ms-overflow-style: none; /* IE/Edge */
+  -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-
-.slider::after{
-content: '';
-position: absolute;
-left: 0;
-top:90%;
-background-color: #ffbf00;
-height: 2px;
-width: 0;
-transition: .2s ease-out;
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
-.slider:hover::after{
+
+.slider::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 90%;
+  background-color: #ffbf00;
+  height: 2px;
+  width: 0;
+  transition: 0.2s ease-out;
+}
+.slider:hover::after {
   width: 90%;
 }
 
-input[type='number']::-webkit-outer-spin-button,
-input[type='number']::-webkit-inner-spin-button {
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-@theme{
-  --color-primary:#ffbf00;
-  --color-secondary:#ffbf00;
-  --color-textPrimary:#dfa702;
+@theme {
+  --color-primary: #ffbf00;
+  --color-secondary: #ffbf00;
+  --color-textPrimary: #dfa702;
 }
 
-body{
+body {
   /* background-color: #dfa702; */
 }
-
