--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
 .text-gradient {
   @apply text-transparent bg-clip-text bg-gradient-to-r from-[#A62C2C] to-[#CF0F47];
 }
+.logo{
+  font-family: 'Style Script';
+}
 
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
