--- a/src/index.css
+++ b/src/index.css
@@ -48,12 +48,24 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: 
+    radial-gradient(farthest-side,#ffa516 94%,#0000) top/8px 8px no-repeat,
+    conic-gradient(#0000 30%,#ffa516);
+  -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation: l13 1s infinite linear;
+}
+@keyframes l13{ 
+  100%{transform: rotate(1turn)}
+}
+
 @theme {
   --color-primary: #ffbf00;
   --color-secondary: #ffbf00;
   --color-textPrimary: #dfa702;
 }
 
-body {
-  /* background-color: #dfa702; */
-}
+
